[gd_scene format=3 uid="uid://b7k3m6qv4n8y"]

[ext_resource type="Script" path="res://scripts/ui/objective_complete_scene_dialog.gd" id="1_scene"]
[ext_resource type="FontFile" uid="uid://xqiy7ijtjsrv" path="res://assets/fonts/VT323-Regular.ttf" id="2_font"]

[node name="ObjectiveCompleteSceneDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_scene")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.01, 0.01, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TopBorder" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1.0, 0.8)

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "OBJECTIVE COMPLETE"
vertical_alignment = 1

[node name="LocationLabel" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.5, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "SECTOR 4-127  |  CYCLE 3"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TitleBorder" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1.0, 0.4)

[node name="ImageContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
mouse_filter = 2

[node name="ImageBackground" type="ColorRect" parent="VBoxContainer/ImageContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.02, 0.02, 0.06, 1)

[node name="SceneImage" type="TextureRect" parent="VBoxContainer/ImageContainer"]
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="SceneCanvas" type="Control" parent="VBoxContainer/ImageContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ScanlineOverlay" type="Control" parent="VBoxContainer/ImageContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BottomBorder" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1.0, 0.4)

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = ""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PromptLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.7, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "Press any key to continue..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomBorder2" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1.0, 0.8)
